chore: add .gitignore and finalize vercel/pages fixes

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
     "functions": {
         "api/analyze.js": {
             "maxDuration": 60,
-            "memory": 1024,
-            "runtime": "nodejs18.x"
+            "memory": 1024
         }
     },
     "headers": [
