fix(cors): allow preflight headers and vary for GH Pages origin

--- a/vercel.json
+++ b/vercel.json
@@ -11,18 +11,10 @@
         {
             "source": "/api/(.*)",
             "headers": [
-                {
-                    "key": "Access-Control-Allow-Origin",
-                    "value": "*"
-                },
-                {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET, POST, OPTIONS"
-                },
-                {
-                    "key": "Access-Control-Allow-Headers",
-                    "value": "Content-Type"
-                }
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+                { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization, X-Requested-With, Accept, Origin, Referer, User-Agent, sec-ch-ua, sec-ch-ua-platform, sec-ch-ua-mobile" },
+                { "key": "Vary", "value": "Origin, Access-Control-Request-Method, Access-Control-Request-Headers" }
             ]
         }
     ],
