--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
     "functions": {
         "api/analyze.js": {
             "maxDuration": 60,
-            "memory": 1024
+            "memory": 1024,
+            "environment": {
+                "NODE_OPTIONS": "--enable-source-maps"
+            }
         }
     },
     "headers": [
