--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@sparticuz/chromium": "^119.0.2",
+    "undici": "^6.19.8",
         "axios": "^1.6.2",
         "cheerio": "^1.0.0-rc.12",
         "cors": "^2.8.5",
